have a working image upload images stored on bunny.net and in mongoDB only filename is stored

--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@descope/nextjs-sdk": "^0.0.16",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "bunny-client": "^0.0.21",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
+    "formidable": "^3.5.1",
     "framer-motion": "^11.3.8",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "next": "^14.2.5",
     "next-auth": "^4.24.7",
+    "next-connect": "^1.0.0",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
@@ -26,10 +29,12 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
