fixed inventory on dashboard, added daisyUI, styling improvements

--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@descope/nextjs-sdk": "^0.0.16",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@vercel/speed-insights": "^1.0.12",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "bunny-client": "^0.0.21",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
+    "flowbite": "^2.4.1",
     "formidable": "^3.5.1",
     "framer-motion": "^11.3.8",
     "jsonwebtoken": "^9.0.2",
@@ -36,6 +41,7 @@
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.19",
+    "daisyui": "^4.12.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8.4.39",
